--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,244 @@
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  stack-a:cmp-a:dev:deploy:
     steps:
       - uses: actions/checkout@v4
-      - run: echo "It's working, it's working!"
+      - run: echo tofu deploy
+  stack-a:cmp-a:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-a:cmp-a:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-a:cmp-a:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-a:cmp-a:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-a:cmp-b:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-a:cmp-b:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-a:cmp-b:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-a:cmp-b:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-a:cmp-b:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-a:cmp-c:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-a:cmp-c:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-a:cmp-c:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-a:cmp-c:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-a:cmp-c:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-b:cmp-a:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-b:cmp-a:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-b:cmp-a:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-b:cmp-a:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-b:cmp-a:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-b:cmp-b:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-b:cmp-b:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-b:cmp-b:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-b:cmp-b:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-b:cmp-b:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-c:cmp-a:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-c:cmp-a:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-c:cmp-a:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-c:cmp-a:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-c:cmp-a:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-c:cmp-b:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-c:cmp-b:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-c:cmp-b:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-c:cmp-b:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-c:cmp-b:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-c:cmp-c:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-c:cmp-c:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-c:cmp-c:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-c:cmp-c:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-c:cmp-c:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-d:cmp-a:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-d:cmp-a:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-d:cmp-a:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-d:cmp-a:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-d:cmp-a:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-e:cmp-a:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-e:cmp-a:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-e:cmp-a:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-e:cmp-a:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-e:cmp-a:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-e:cmp-b:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-e:cmp-b:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-e:cmp-b:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-e:cmp-b:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-e:cmp-b:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
+  stack-f:cmp-a:dev:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-f:cmp-a:dev:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-f:cmp-a:stg:deploy:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu deploy
+  stack-f:cmp-a:stg:plan:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu plan
+  stack-f:cmp-a:validate:
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo tofu validate
 name: CI
 "on":
   pull_request:
